2006-06-15	ludovic@inverse.ca
	
	* Initial import of SOGo from trunk.